--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         let protocol = new pmtiles.Protocol();
         maplibregl.addProtocol("pmtiles", protocol.tile);
 
-        let PMTILES_URL = "https://pmtiles-data.s3.ap-northeast-1.amazonaws.com/transportation-census/teiki/04_teiki_od_pattern_count_add_coordinate/out/teiki_od.pmtiles";
+        let PMTILES_URL = "https://xs489works.xsrv.jp/pmtiles-data/transportation-census/teiki/04_teiki_od_pattern_count_add_coordinate/out/teiki_od.pmtiles";
 
         const p = new pmtiles.PMTiles(PMTILES_URL)
         p.getMetadata().then((res) => console.log(res));
